@@ -1,3 +1,8 @@
+XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Improvement: scaling of diagram and pictures is now via Ctrl+Mouse wheel
+
+
 2013 Aug 23 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 2.1.1
